--- a/genomics.html
+++ b/genomics.html
@@ -26,19 +26,20 @@ Week 3: Python and Genomic Data - Biopython<br>
 Week 4: Working with Data in Galaxy Project<br>
 Week 5: Algorithms for DNA Sequencing<br>
 Week 6: Statistics for Genomic Data<br>
-Mid Exam
+Mid Exam <br>
 Week 7: Command Line Tools<br>
 Week 8: Bioconductor<br>
 Week 9: Machine Learning and Analytics - I<br>
 Week 10: Machine Learning and Analytics - II<br>
 Week 11: Sequence Alignment and PSI Blast<br>
 Week 12: Submission of Project<br>
-Final Exam 
+Final Exam <br>
 
 <p><b>Grading</b><br>
 1. Class Attendance - 10%<br>
-2. Project (presentation+report) - 20% + 30%<br> 
-3. Final Exam - 40%<br>
+2. Assignments and Class Tests - 20% <br>
+3. Mid Exam 30% <br> 
+4. Final Exam - 40%<br>
 
 
 
