--- a/genomics.html
+++ b/genomics.html
@@ -20,7 +20,7 @@ Friday, 8:30 AM - 11:00 AM Computer Lab 10 Room # 530
 
 
 <p><b>Course Schedule</b> <br>
-Week 1: Introduction, Molecular Biology<br>
+Week 1: Introduction, Molecular Biology, Cell Biology  <a href="https://www.dropbox.com/sh/m52dio48mjpi8yl/AADTa6d6qx2BpUJNgVK6VDr2a?dl=0">Slides</a> <a href="https://d3c33hcgiwev3.cloudfront.net/_669db620ef363727a43d57b59bcbbc11_Salzberg-etal-Science2001-annotated.pdf?Expires=1569715200&Signature=PmOGpZwuJlWKR-sW5SseHD68uep77CJai6sCyp6q-HoNQrJS0F5Q0ivXl45ke8uQPxTqDsX8UMExl4mgz0ZnN2agRvI6TayBc52hThmxa-9jiqw5ZWrjT36iCrTwY3EjrMtuHK2J2jDvuq7ypbDcpdCAOSgSX2T8GfDxhxBb~HA_&Key-Pair-Id=APKAJLTNE6QMUY6HBC5A">Paper</a><br> 
 Week 2: Python and Genomic Data - Rosalind<br>
 Week 3: Python and Genomic Data - Biopython<br>
 Week 4: Working with Data in Galaxy Project<br>
