--- a/genomics.html
+++ b/genomics.html
@@ -7,7 +7,7 @@
 
 <b>Course Teacher</b> <br>
 Dr. Swakkhar Shatabda<br>
-Assistant Professor & Undergraduate Program Coordinator<br>
+Associate Professor & Undergraduate Program Coordinator<br>
 Department of CSE, United International University <br>
 Room: 412 Email: swakkhar@cse.uiu.ac.bd Phone: 01776195310<br>
 <p>
