--- a/genomics.html
+++ b/genomics.html
@@ -16,7 +16,7 @@ Friday, 8:30 AM - 11:00 AM Computer Lab 10 Room # 530
 <br>
 
 <p><b>Books</b><br>
-1. Bioinformatics-Algorithms-An-Active-Learning-Approach Vol 1 & 2<br>
+1. Bioinformatics-Algorithms-An-Active-Learning-Approach Vol 1 & 2 <a href="https://www.dropbox.com/sh/rsof6eaurmfghju/AADb_9qsk4hB45xdCDXTcp2Qa?dl=0">Books</a><br>
 
 
 <p><b>Course Schedule</b> <br>
