--- a/genomics.html
+++ b/genomics.html
@@ -21,7 +21,7 @@ Friday, 8:30 AM - 11:00 AM Computer Lab 10 Room # 530
 
 <p><b>Course Schedule</b> <br>
 Week 1: Introduction, Molecular Biology, Cell Biology  <a href="https://www.dropbox.com/sh/m52dio48mjpi8yl/AADTa6d6qx2BpUJNgVK6VDr2a?dl=0">Slides</a> <a href="https://www.dropbox.com/s/0fmwfi3vkxa2qwc/paper.pdf?dl=0">Paper</a><br> 
-Week 2: Python and Genomic Data - Rosalind <a href="https://www.dropbox.com/s/dxd61h8ezwsbe25/Genome%20Replication.pdf?dl=0"> slides </a> <a href="https://www.dropbox.com/s/ce2mgemth9zu0xy/IntroPython.ipynb?dl=0">NoteBook Week2</a> <br>
+Week 2: Python and Genomic Data - Rosalind <a href="https://www.dropbox.com/s/dxd61h8ezwsbe25/Genome%20Replication.pdf?dl=0"> slides </a> <a href="https://www.dropbox.com/s/ce2mgemth9zu0xy/IntroPython.ipynb?dl=0">NoteBook</a> <br>
 Week 3: Python and Genomic Data - Biopython<br>
 Week 4: Working with Data in Galaxy Project<br>
 Week 5: Algorithms for DNA Sequencing<br>
