Week 3 link fixed

--- a/genomics.html
+++ b/genomics.html
@@ -22,7 +22,7 @@ Friday, 8:30 AM - 11:00 AM Computer Lab 10 Room # 530
 <p><b>Course Schedule</b> <br>
 Week 1: Introduction, Molecular Biology, Cell Biology  <a href="https://www.dropbox.com/sh/m52dio48mjpi8yl/AADTa6d6qx2BpUJNgVK6VDr2a?dl=0">Slides</a> <a href="https://www.dropbox.com/s/0fmwfi3vkxa2qwc/paper.pdf?dl=0">Paper</a><br> 
 Week 2: Python and Genomic Data - Rosalind, Finding OriC <a href="https://www.dropbox.com/s/dxd61h8ezwsbe25/Genome%20Replication.pdf?dl=0"> slides </a> <a href="https://www.dropbox.com/s/ce2mgemth9zu0xy/IntroPython.ipynb?dl=0">NoteBook</a> <br>
-Week 3: DNA Sequencing - Read Alignment and Assembly  <a href"https://www.dropbox.com/s/k3pv7lolhefxvfv/Week3%2C%20String%20Matching%2C%20Sequence%20and%20Reads.ipynb?dl=0"> NoteBook </a><br>
+Week 3: DNA Sequencing - Read Alignment and Assembly  <a href="https://www.dropbox.com/s/k3pv7lolhefxvfv/Week3%2C%20String%20Matching%2C%20Sequence%20and%20Reads.ipynb?dl=0"> NoteBook </a><br>
 Week 4: BioPython, Working with Data in Galaxy Project<br>
 Week 5: Algorithms for DNA Sequencing<br>
 Week 6: Statistics for Genomic Data<br>
