Salmonella genome added

--- a/genomics.html
+++ b/genomics.html
@@ -29,6 +29,8 @@ Week 3: DNA Sequencing - Read Alignment and Assembly
 <a href="http://d28rh4a8wq0iu5.cloudfront.net/ads1/data/ERR266411_1.first1000.fastq"> Reads from Phix </a> <br>
 <a href="https://www.dropbox.com/s/jtmebwjrzmg6zra/Week3.ipynb?dl=0">NoteBook</a> <br>
 
+Home Work 2:  Write Python Code and generate Skew Diagram<a href="https://www.dropbox.com/s/zxae2uy594dapvq/Salmonella_enterica.fa?dl=0">Genome Salmonella_enterica</a> <br>
+
 Week 4: BioPython, Working with Data in Galaxy Project<br>
 Week 5: Algorithms for DNA Sequencing<br>
 Week 6: Statistics for Genomic Data<br>
