--- a/genomics.html
+++ b/genomics.html
@@ -22,7 +22,7 @@ Friday, 8:30 AM - 11:00 AM Computer Lab 10 Room # 530
 <p><b>Course Schedule</b> <br>
 Week 1: Introduction, Molecular Biology, Cell Biology  <a href="https://www.dropbox.com/sh/m52dio48mjpi8yl/AADTa6d6qx2BpUJNgVK6VDr2a?dl=0">Slides</a> <a href="https://www.dropbox.com/s/0fmwfi3vkxa2qwc/paper.pdf?dl=0">Paper</a><br> 
 Week 2: Python and Genomic Data - Rosalind, Finding OriC <a href="https://www.dropbox.com/s/dxd61h8ezwsbe25/Genome%20Replication.pdf?dl=0"> slides </a> <a href="https://www.dropbox.com/s/ce2mgemth9zu0xy/IntroPython.ipynb?dl=0">NoteBook</a> <br>
-Week 3: DNA Sequencing - Read Alignment and Assembly  
+Week 3: DNA Sequencing - Read Alignment   
 <a href="http://d28rh4a8wq0iu5.cloudfront.net/ads1/data/lambda_virus.fa"> LambdaPhage</a> <br> 
 <a href="http://d28rh4a8wq0iu5.cloudfront.net/ads1/data/SRR835775_1.first1000.fastq"> Sample Reads </a> <br>  
 <a href="http://d28rh4a8wq0iu5.cloudfront.net/ads1/data/phix.fa"> Phix (http://d28rh4a8wq0iu5.cloudfront.net/ads1/data/phix.fa) </a> <br>
@@ -31,8 +31,9 @@ Week 3: DNA Sequencing - Read Alignment and Assembly
 
 Home Work 2:  Write Python Code and generate Skew Diagram<a href="https://www.dropbox.com/s/zxae2uy594dapvq/Salmonella_enterica.fa?dl=0">Genome Salmonella_enterica</a> <br>
 
-Week 4: BioPython, Working with Data in Galaxy Project<br>
-Week 5: Algorithms for DNA Sequencing<br>
+Week 4: Algorithms for DNA Sequencing <a href="https://www.dropbox.com/s/l5e20a0a9fukwb5/read.zip?dl=0">Codes.zip</a><br>
+
+Week 5: BioPython, Working with Data in Galaxy Project<br>
 Week 6: Statistics for Genomic Data<br>
 Mid Exam <br>
 Week 7: Command Line Tools<br>
