--- a/genomics.html
+++ b/genomics.html
@@ -31,7 +31,7 @@ Week 3: DNA Sequencing - Read Alignment
 
 Home Work 2:  Write Python Code and generate Skew Diagram<a href="https://www.dropbox.com/s/zxae2uy594dapvq/Salmonella_enterica.fa?dl=0">Genome Salmonella_enterica</a> <br>
 
-Week 4: Algorithms for DNA Sequencing <a href="https://www.dropbox.com/s/l5e20a0a9fukwb5/read.zip?dl=0">Codes.zip</a><br>
+Week 4: Algorithms for DNA Sequencing <a href="https://www.dropbox.com/s/l5e20a0a9fukwb5/read.zip?dl=0">Codes.zip</a> <a href="https://www.dropbox.com/s/o5wjugo7v04lmm1/genomeassembly.pdf?dl=0"> Genome Assembly Slides</a><br>
 
 Week 5: BioPython, Working with Data in Galaxy Project<br>
 Week 6: Statistics for Genomic Data<br>
