--- a/genomics.html
+++ b/genomics.html
@@ -38,7 +38,7 @@ Week 6: Statistics for Genomic Data<br>
 Mid Exam <br>
 Week 7: Command Line Tools<br>
 Week 8: Bioconductor<br>
-Week 9: Machine Learning and Analytics - I<br>
+Week 9: Machine Learning and Analytics - I <a href="https://www.dropbox.com/sh/d5k59fs59mcv9g7/AAC184cfscY8dsKqoB9koVy0a?dl=0">Papers<\a><br>
 Week 10: Machine Learning and Analytics - II<br>
 Week 11: Sequence Alignment and PSI Blast<br>
 Week 12: Submission of Project<br>
