--- a/genomics.html
+++ b/genomics.html
@@ -33,16 +33,26 @@ Home Work 2:  Write Python Code and generate Skew Diagram<a href="https://www.dr
 
 Week 4: Algorithms for DNA Sequencing <a href="https://www.dropbox.com/s/l5e20a0a9fukwb5/read.zip?dl=0">Codes.zip</a> <a href="https://www.dropbox.com/s/o5wjugo7v04lmm1/genomeassembly.pdf?dl=0"> Genome Assembly Slides</a><br>
 
-Week 5: BioPython, Working with Data in Galaxy Project<br>
-Week 6: Statistics for Genomic Data<br>
 Mid Exam <br>
-Week 7: Command Line Tools<br>
-Week 8: Bioconductor<br>
-Week 9: Machine Learning and Analytics - I <a href="https://www.dropbox.com/sh/d5k59fs59mcv9g7/AAC184cfscY8dsKqoB9koVy0a?dl=0">Papers</a><br>
+Week 5: Machine Learning and Analytics - I <a href="https://www.dropbox.com/sh/d5k59fs59mcv9g7/AAC184cfscY8dsKqoB9koVy0a?dl=0">Papers</a><br>
+
+
+Week 6: BioPython, Working with Data in Galaxy Project<br>
+Week 7: Statistics for Genomic Data<br>
+Week 8: Command Line Tools<br>
+Week 9: Bioconductor<br>
 Week 10: Machine Learning and Analytics - II<br>
 Week 11: Sequence Alignment and PSI Blast<br>
 Week 12: Submission of Project<br>
 Final Exam <br>
+
+<p><b>Topics Selected as Project</b><br>
+1. Syeda Lamia Noor - CRISPR- CAS9 Genome Editing <br>
+2. Md. Zahiruddin Aqib - Prediction of Recombination Hotspots <br>
+3. Humaira Amina - OriC finding <br>
+4. Amjadul Alam - Detecting N6-methyladenosine sites <br>
+5. Mainuddin Ahmed - CRISPR <br>
+6. Khandokar Raza A Rabbi - Promoter Detection <br>
 
 <p><b>Grading</b><br>
 1. Class Attendance - 10%<br>
