--- a/genomics.html
+++ b/genomics.html
@@ -36,13 +36,13 @@ Week 4: Algorithms for DNA Sequencing <a href="https://www.dropbox.com/s/l5e20a0
 Mid Exam <br>
 Week 5: Machine Learning and Analytics - I <a href="https://www.dropbox.com/sh/d5k59fs59mcv9g7/AAC184cfscY8dsKqoB9koVy0a?dl=0">Papers</a><br>
 
+Week 6: Sequence Alignment <a href="https://www.dropbox.com/sh/ouvlioodezdow9t/AAAR98z5yNQXMcop2n8JUhowa?dl=0">Slides</a><br>
 
-Week 6: BioPython, Working with Data in Galaxy Project<br>
-Week 7: Statistics for Genomic Data<br>
-Week 8: Command Line Tools<br>
-Week 9: Bioconductor<br>
-Week 10: Machine Learning and Analytics - II<br>
-Week 11: Sequence Alignment and PSI Blast<br>
+Week 7: BioPython, Working with Data in Galaxy Project<br>
+Week 8: Statistics for Genomic Data<br>
+Week 9: Command Line Tools<br>
+Week 10: Bioconductor<br>
+Week 11: Machine Learning and Analytics - II<br>
 Week 12: Submission of Project<br>
 Final Exam <br>
 
@@ -53,6 +53,9 @@ Final Exam <br>
 4. Amjadul Alam - Detecting N6-methyladenosine sites <br>
 5. Mainuddin Ahmed - CRISPR <br>
 6. Khandokar Raza A Rabbi - Promoter Detection <br>
+
+<><b>Report Template</b>
+Link: <a href="https://www.overleaf.com/read/xmcdckpnpmms">Overleaf</a>
 
 <p><b>Grading</b><br>
 1. Class Attendance - 10%<br>
