--- a/genomics.html
+++ b/genomics.html
@@ -54,7 +54,7 @@ Final Exam <br>
 5. Mainuddin Ahmed - CRISPR <br>
 6. Khandokar Raza A Rabbi - Promoter Detection <br>
 
-<><b>Report Template</b>
+<p><b>Report Template</b>
 Link: <a href="https://www.overleaf.com/read/xmcdckpnpmms">Overleaf</a>
 
 <p><b>Grading</b><br>
