--- a/genomics.html
+++ b/genomics.html
@@ -53,6 +53,7 @@ Final Exam <br>
 4. Amjadul Alam - Detecting N6-methyladenosine sites <br>
 5. Mainuddin Ahmed - CRISPR <br>
 6. Khandokar Raza A Rabbi - Promoter Detection <br>
+7. Md. Tanvir Ehsan - Prediction of adenosine to inosine RNA editing sites <br>
 
 <p><b>Report Template</b>
 Link: <a href="https://www.overleaf.com/read/xmcdckpnpmms">Overleaf</a>
