--- a/genomics.html
+++ b/genomics.html
@@ -54,6 +54,7 @@ Final Exam <br>
 5. Mainuddin Ahmed - CRISPR <br>
 6. Khandokar Raza A Rabbi - Promoter Detection <br>
 7. Md. Tanvir Ehsan - Prediction of adenosine to inosine RNA editing sites <br>
+8. Fasi Uddin Raihan - OriC<br>
 
 <p><b>Report Template</b>
 Link: <a href="https://www.overleaf.com/read/xmcdckpnpmms">Overleaf</a>
