--- a/genomics.html
+++ b/genomics.html
@@ -31,20 +31,17 @@ Week 3: DNA Sequencing - Read Alignment
 
 Home Work 2:  Write Python Code and generate Skew Diagram<a href="https://www.dropbox.com/s/zxae2uy594dapvq/Salmonella_enterica.fa?dl=0">Genome Salmonella_enterica</a> <br>
 
-Week 4: Algorithms for DNA Sequencing <a href="https://www.dropbox.com/s/l5e20a0a9fukwb5/read.zip?dl=0">Codes.zip</a> <a href="https://www.dropbox.com/s/o5wjugo7v04lmm1/genomeassembly.pdf?dl=0"> Genome Assembly Slides</a><br>
+Week 5: Algorithms for DNA Sequencing <a href="https://www.dropbox.com/s/l5e20a0a9fukwb5/read.zip?dl=0">Codes.zip</a> <a href="https://www.dropbox.com/s/o5wjugo7v04lmm1/genomeassembly.pdf?dl=0"> Genome Assembly Slides</a><br>
 
 Mid Exam <br>
-Week 5: Machine Learning and Analytics - I <a href="https://www.dropbox.com/sh/d5k59fs59mcv9g7/AAC184cfscY8dsKqoB9koVy0a?dl=0">Papers</a><br>
+Week 7: Machine Learning and Analytics - I <a href="https://www.dropbox.com/sh/d5k59fs59mcv9g7/AAC184cfscY8dsKqoB9koVy0a?dl=0">Papers</a><br>
 
-Week 6: Sequence Alignment <a href="https://www.dropbox.com/sh/ouvlioodezdow9t/AAAR98z5yNQXMcop2n8JUhowa?dl=0">Slides</a><br>
+Week 8: Sequence Alignment <a href="https://www.dropbox.com/sh/ouvlioodezdow9t/AAAR98z5yNQXMcop2n8JUhowa?dl=0">Slides</a><br>
 
-Week 7: BioPython, Working with Data in Galaxy Project<br>
-Week 8: Statistics for Genomic Data<br>
-Week 9: Command Line Tools<br>
-Week 10: Bioconductor<br>
-Week 11: Machine Learning and Analytics - II<br>
-Week 12: Submission of Project<br>
-Final Exam <br>
+Week 9: Machine Learning and Analytics - II<br>
+Week 10: Hidden Markov Model and Gene Prediction <br>
+Week 11: Submission of Project<br>
+Final Exam <a href="https://www.dropbox.com/s/i1g2l5vu89bhjz4/Sample.pdf?dl=0">Sample</a> <br>
 
 <p><b>Topics Selected as Project</b><br>
 1. Syeda Lamia Noor - CRISPR- CAS9 Genome Editing <br>
