--- a/genomics.html
+++ b/genomics.html
@@ -44,7 +44,7 @@ Week 11: Submission of Project<br>
 Final Exam <a href="https://www.dropbox.com/s/i1g2l5vu89bhjz4/Sample.pdf?dl=0">Sample</a> <br>
 
 <p><b>Topics Selected as Project</b><br>
-1. Syeda Lamia Noor - CRISPR- CAS9 Genome Editing <br>
+1. Syeda Lamia Noor - Promoter  <br>
 2. Md. Zahiruddin Aqib - Prediction of Recombination Hotspots <br>
 3. Humaira Amina - OriC finding <br>
 4. Amjadul Alam - Detecting N6-methyladenosine sites <br>
