--- a/genomics.html
+++ b/genomics.html
@@ -40,7 +40,7 @@ Week 8: Sequence Alignment <a href="https://www.dropbox.com/sh/ouvlioodezdow9t/A
 
 Week 9: Machine Learning and Analytics - II<br>
 Week 10: Hidden Markov Model and Gene Prediction <a href="https://www.dropbox.com/s/amat5cerrh6ky8m/Ch11_HMM.pdf?dl=0">Slides 1 </a> <a href="https://www.dropbox.com/s/813q3unas9fpjgr/hmm.pdf?dl=0">Slides 2</a> <a href="https://www.dropbox.com/s/mnlbxkxz50qnmgm/viterbi.pdf?dl=0">Slides 3</a> <br>
-Week 11: Submission of Project<br>
+Week 11: Gene Expression <a href="https://www.dropbox.com/s/bo7p4obwweiotv2/Ch10_Clustering.pdf?dl=0">Slides</a><br>
 Final Exam <a href="https://www.dropbox.com/s/i1g2l5vu89bhjz4/Sample.pdf?dl=0">Sample</a> <br>
 
 <p><b>Topics Selected as Project</b><br>
