--- a/genomics.html
+++ b/genomics.html
@@ -52,6 +52,7 @@ Final Exam <a href="https://www.dropbox.com/s/i1g2l5vu89bhjz4/Sample.pdf?dl=0">S
 6. Khandokar Raza A Rabbi - Promoter Detection <br>
 7. Md. Tanvir Ehsan - Prediction of adenosine to inosine RNA editing sites <br>
 8. Fasi Uddin Raihan - OriC<br>
+9. Tahmid Hassan - Predicting Transcription factor binding site <br>
 
 <p><b>Report Template</b>
 Link: <a href="https://www.overleaf.com/read/xmcdckpnpmms">Overleaf</a>
